--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/material": "^5.14.15",
     "@tanstack/react-table": "^8.10.7",
     "axios": "^1.5.1",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
